css/styles.css
/* Use import to split up your CSS into manageable chunks */
@import url("./reset.css");
/* Files that are only needed to be imported are called partials */
/* These are marked with an underscore: */
@import url("./variables.css");
/* Feel free to add as many of these imports as you need */

body {
  color: var(--color-primary);
  background-color: FFFFFF;
  font-family: Arial, Helvetica, sans-serif;
  display:flex;
  flex-direction: column;
  justify-content: space-between;
}

#background_first{
  background-image: url(../assets/images/Norronare.png);
  min-height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
  margin-bottom: 3%;
}

#background_second{
  background-image: url(../assets/images/extreme-rain.jpg);
  min-height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
  margin-bottom: 3%;
}

 nav, #menu-checkbox{
  display: none;
}

#menu-checkbox:checked ~ nav {
  display: block;
}

header{
  position:relative;
  padding: 1px;
  font-size: 1.5rem;
}

nav{
  position:absolute;
  background:white;
  left: 0px;

}

nav a{
  display:block;
  color: black;
  font-size: 15px;
  font-weight: bold;
  margin-right: 15px;
}

.navdiv  {
  padding-left: 20px;
}
.nav-menu a{
  text-decoration: none;
}

.logo {
  display: none;
  font-size: 35px;
  font-weight: 600;
  color: white;
  width: 80px;
  height: 80px
}


@media (min-width: 600px){
  nav{
    display: block;
    position: static;
  }
  .navdiv{
    display:flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 1px 50px;
  }
  .logo{
    display: block;
  }
  .nav-menu{
    display: flex;
    flex-direction: row;
    align-items: center;
  }

  .hamburger-icon{
    display: none;
  }


} 

.navbar-image{
  position: relative;
  top: 5px;
  margin-right: 15px;
}

 footer{
  background-color: #053541 ;
}

.footercontainer{
  left: 0;
  bottom: 0;
  display: flex;
  width: 100%;
  padding: 20px;
  background-color: #3B515E;
  border: 10 sol id;
  justify-content: space-between;
}

.socialicons{
  display: flex;
  justify-content: center;

}

.socialicons a img{
  height: 20px;
  width: 20px;
  margin: 2px;
}

.socialicons a:hover i{
  color: beige;
  transition:0.5s ;
}

.footernav{
  display: flex;
}

.footernav ul{
  align-items:center ;
}

.footernav ul li{
  list-style: none;
  color: white;
}

.footernav ul li a{
  color: white; font-size: 10px;  margin-right: 25px;
}


.footerbottom{
  background-color: aquamarine;
}

.designer{
  opacity:0.7 ;
  text-transform: uppercase;
  letter-spacing:  1px;
  font-weight: 400;
  margin: 0px 5px;

}

#background{
  background-image: url(../assets/images/pexels-photo-433142.jpeg);
  min-height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
  margin-bottom: 3%;
}

.row{
  display: flex;
}

.column{
  background-color: #F5F5F5;
  flex: 25.00%;
  padding: 5px;
  margin: 5px;
  border: black 1px solid;
}

.column-show-item{
  background-color:white;
  flex: 25.00%;
  padding: 5px;
  margin: 5px;
}

#backgroundw{
  background-image: url(../assets/images/istockphoto-1318164337-612x612.jpg);
  min-height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
  margin-bottom: 3%;
}



#background_success{
  background-image: url(../assets/images/success1.jfif);
  min-height: 6 0vh;
  background-repeat: no-repeat;
  background-size: cover;
  margin-bottom: 3%;
}

.item{
  padding: 0px;
  margin: 0px;
  text-align: center;
}

#background_about{
  background-image: url(../assets/images/about-us.webp);
  min-height: 100vh;
  background-repeat: no-repeat;
  background-size: cover;
  margin-bottom: 3%;
}

.sizes{
  border: solid rgb(99, 98, 98) 1px;
  padding: 5px;
  margin: 1px;
}

.add-cart-label{
  margin-bottom: 5%;
  display: flex;
  flex-direction: column;
} 

.add-cart-label input{
  border: 0px;
  border-bottom: 1px solid grey;
} 

.contact-label{
  border: 1px solid rgb(80, 79, 79) 
}

hr.solid {
  border-top: 1px solid gray;
}
a.button {
  padding: 1px 6px;
  border: 1px outset buttonborder;
  color: white;
  background-color: black;
  text-decoration: none;
  font-size: xx-small;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 40%;
  height: 30px;
}

